@@ -1,3 +1,7 @@
+2010-10-17  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #16037: htmlArea RTE: Bring custom events under HTMLArea namespace
+
 2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to bug #15880: htmlArea RTE: Context menu not working in TYPO3 4.4.3 and 4.5-dev
